# 202112012_EDD_Practica

202112012_EDD_Practica-main(3)/202112012_EDD_Practica-main/Practica1/: CMakeLists.txt  ComparadorPasajero.h  GestorPasajeros.cpp  GestorPasajeros.h  ListaAviones.cpp  ListaAviones.h  ListaDoblementeEnlazada.cpp  ListaDoblementeEnlazada.h  Movimientos.txt  NodoLista.h  NodoPasajero.h  Pasajero.h  Pila.cpp  Pila.h  aviones2.json  main.cpp  movimientos2.txt  pasajero2.json
202112012_EDD_Practica-main/Practica1/: ComparadorPasajero.h  GestorAviones.h  GestorPasajeros.cpp  GestorPasajeros.h  ListaAviones.cpp  ListaAviones.h  ListaDoblementeEnlazada.cpp  ListaDoblementeEnlazada.h  Movimientos.txt  NodoLista.h  Pasajero.cpp  Pasajero.h  Pila.cpp  Pila.h  main.cpp
MANUAL_TECNICO_202112012/: MANUAL_TECNICO_202112012.md
Practica1/: CMakeLists.txt  ColaPasajeros.cpp  ColaPasajeros.h  GestorAviones.cpp  GestorPasajeros.cpp  GestorPasajeros.h  Pasajero.h  Pila.h  main.cpp
